# rag-architecture

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  test.ipynb
data/data_embeddings/0d0bddae-f22b-4593-b8b0-e9b45b273b39/: index_metadata.pickle
data/data_embeddings/81320e9d-8c88-4119-870b-77bf85d0621f/: index_metadata.pickle
data/data_embeddings/ad09475b-062a-4f24-983a-ca85f00d4100/: index_metadata.pickle
data/data_embeddings/b54e678a-1bd6-4e4d-beca-314b42fbd413/: index_metadata.pickle
data/processed/: labels.tsv
notebooks/: embeddings.ipynb  rag.ipynb  utils.py
notebooks/..data/data_embeddings/attention-embeddings/: chroma.sqlite3
src/: app.py  utils.py
src/frontend/: _templates.py  gradio_app.py  st_app.py  utils.py
