[tool.poetry]
name = "rag-architecture"
version = "0.1.0"
description = "RAG architecture for NLP and Chatbots"
authors = ["Jose Alcocer <jolual2747@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "0.4.1"
gradio = "3.47.1"
pandas = "^2.2.1"
sentence-transformers = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
