[tool.poetry]
name = "rag-architecture"
version = "0.1.0"
description = "RAG architecture for NLP and Chatbots"
authors = ["Jose Alcocer <jolual2747@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "0.4.17"
gradio = "3.47.1"
pandas = "^2.2.1"
sentence-transformers = "^2.6.1"
mapply = "^0.1.25"
openai = "^1.14.3"
protobuf = "3.20.0"
langchain = "^0.1.13"
unstructured = "0.7.12"
pypdf = "^4.1.0"
tiktoken = "^0.6.0"
streamlit = "^1.32.2"
langchain-openai = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
